--- a/config.json
+++ b/config.json
@@ -68,7 +68,7 @@
         "vm": {
             "memory_overhead": "memory_overhead",
             "memory_static_max": "memory_static_max",
-            "memory_dybamic_max": "memory_dybamic_max",
+            "memory_dynamic_max": "memory_dynamic_max",
             "memory_dynamic_min": "memory_dynamic_min",
             "memory_static_min": "memory_static_min",
             "vcpus_at_startup": "VCPUs_at_startup"
