--- a/vars.env
+++ b/vars.env
@@ -1,5 +1,5 @@
-XEN_HOST=172.29.1.5
+XEN_HOST=<xen host or pool master>
 XEN_MODE=pool
-XEN_PASSWORD=manila2024
+XEN_PASSWORD=<xen password>
 XEN_SSL_VERIFY=false
-XEN_USER=root
+XEN_USER=<xen username>
